extends Control


func _on_Level_1_pressed():
	get_tree().change_scene("res://scenes/levels/level1.tscn")


func _on_Level_2_pressed():
	get_tree().change_scene("res://scenes/levels/level2.tscn")


func _on_Level_3_pressed():
	get_tree().change_scene("res://scenes/levels/level3.tscn")


func _on_Level_4_pressed():
	get_tree().change_scene("res://scenes/levels/level4.tscn")


func _on_Menu_pressed():
	get_tree().change_scene("res://scenes/screens/Menu.tscn")


func _on_Level_5_pressed():
	get_tree().change_scene("res://scenes/levels/level5.tscn")
